infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  #name of deployment
  name: event-bus-depl
spec:
  #the number of pods
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  #specify the config of one pod
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: travish99/event-bus
          resources:
            limits:
              memory: 512Mi
              cpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  #if no type specified, create ClusterIP by default
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
