infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  #name of deployment
  name: posts-depl
spec:
  #the number of pods
  replicas: 1
  selector:
    matchLabels:
      app: posts
  #specify the config of one pod
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: travish99/posts_service 
          # resources:
          #   limits:
          #     memory: 512Mi
          #     cpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
    selector:
      app: posts
    ports:
      - name: posts
        protocol: TCP
        port: 4000
        targetPort: 4000
